--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,103 +1,41 @@
+# Terraform Provider release workflow.
 name: Release
 
+# This GitHub action creates a release when a tag that matches the pattern
+# "v*" (e.g. v0.1.0) is created.
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*'
+      - 'v*'
 
+# Releases need permissions to read and write the repository contents.
+# GitHub considers creating releases and uploading assets as writing contents.
 permissions:
   contents: write
 
 jobs:
-  release-notes:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
-        with:
-          fetch-depth: 0
-      - name: Generate Release Notes
-        run: sed -n -e "1{/# /d;}" -e "2{/^$/d;}" -e "/# $(git describe --abbrev=0 --exclude="$(git describe --abbrev=0 --match='v*.*.*' --tags)" --match='v*.*.*' --tags | tr -d v)/q;p" CHANGELOG.md > release-notes.txt
-      - uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
-        with:
-          name: release-notes
-          path: release-notes.txt
-          retention-days: 1
-  terraform-provider-release:
-    name: 'Terraform Provider Release'
-    uses: hashicorp/ghaction-terraform-provider-release/.github/workflows/community.yml@v4
-    secrets:
-      gpg-private-key: '${{ secrets.GPG_PRIVATE_KEY }}'
-    with:
-      setup-go-version-file: 'go.mod'
-  highest-version-tag:
-    needs: [terraform-provider-release]
-    runs-on: macos-latest
-    outputs:
-      tag: ${{ steps.highest-version-tag.outputs.tag }}
-    steps:
-      - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
-        with:
-          # Allow tag to be fetched when ref is a commit
-          fetch-depth: 0
-      - name: Output highest version tag
-        id: highest-version-tag
-        run: |
-          HIGHEST=$(git tag | sort -V | tail -1)
-          echo "tag=$HIGHEST" >> "$GITHUB_OUTPUT"
-  changelog-newversion:
-    needs: [terraform-provider-release, highest-version-tag]
-    # write new changelog header only if release tag is the $HIGHEST i.e. exists on main
-    # and not a backport release branch (e.g. release/3.x). This results in
-    # manually updating the CHANGELOG header if releasing from the non-default branch.
-    # TODO: find a more deterministic way to determine release branch from tag commit
-    if: github.ref_name == needs.highest-version-tag.outputs.tag
-    runs-on: macos-latest
-    steps:
-      - uses: actions/create-github-app-token@5d869da34e18e7287c1daad50e0b8ea0f506ce69 # v1.11.0
-        id: app-token
-        with:
-          app-id: ${{ secrets.APP_ID }}
-          private-key: ${{ secrets.APP_PEM }}
-      - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
-        with:
-          fetch-depth: 0
-          ref: main
-          token: ${{ steps.app-token.outputs.token }}
-      - name: Update Changelog Header
-        run: |
-          CHANGELOG_FILE_NAME="CHANGELOG.md"
-          PREVIOUS_RELEASE_TAG=${{ github.ref_name }}
-
-          # Add Release Date
-          RELEASE_DATE=`date +%B' '%e', '%Y`
-          sed -i -e "1 s/Unreleased/$RELEASE_DATE/" $CHANGELOG_FILE_NAME
-
-          # Prepend next release line
-          echo Previous release is: $PREVIOUS_RELEASE_TAG
-
-          NEW_RELEASE_LINE=$(echo $PREVIOUS_RELEASE_TAG | awk -F. '{
-              $1 = substr($1,2)
-              $2 += 1
-              printf("%s.%01d.0\n\n", $1, $2);
-          }')
-
-          echo New minor version is: v$NEW_RELEASE_LINE
-
-          echo -e "## $NEW_RELEASE_LINE (Unreleased)\n$(cat $CHANGELOG_FILE_NAME)" > $CHANGELOG_FILE_NAME
-      - run: |
-            git config --local user.email changelogbot@hashicorp.com
-            git config --local user.name changelogbot
-            git add CHANGELOG.md
-            git commit -m "Update CHANGELOG.md after ${{ github.ref_name }}"
-            git push
-  upload-tag-before-post-publish:
-    needs: [terraform-provider-release]
+  goreleaser:
     runs-on: ubuntu-latest
     steps:
-      - name: Save Release Tag
-        run: echo ${{ github.ref_name }} > release-tag.data
-      - uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
+      - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
         with:
-          name: release-tag
-          path: release-tag.data
-          retention-days: 1
+          # Allow goreleaser to access older tag information.
+          fetch-depth: 0
+      - uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
+        with:
+          go-version-file: 'go.mod'
+          cache: true
+      - name: Import GPG key
+        uses: crazy-max/ghaction-import-gpg@01dd5d3ca463c7f10f7f4f7b4f177225ac661ee4 # v6.1.0
+        id: import_gpg
+        with:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@286f3b13b1b49da4ac219696163fb8c1c93e1200 # v6.0.0
+        with:
+          args: release --clean
+        env:
+          # GitHub sets the GITHUB_TOKEN secret automatically.
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
